[add]クイック診断フォーム操作追加

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,14 +39,14 @@
             <div class="form-field-content">
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="children"><span></span>あり
-                  <input type="number" name="children-num" min="1" max="5" class="js-clickable"><span
+                  <input type="radio" name="children" id="children-yes"><span></span>あり
+                  <input type="number" name="children-num" id="children-num" min="1" max="5" class="js-clickable" disabled=""><span
                     class="form-control-unit">人</span>
                 </label>
               </div>
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="children"><span></span>なし
+                  <input type="radio" name="children" id="children-none"><span></span>なし
                 </label>
               </div>
             </div>
@@ -57,14 +57,14 @@
             <div class="form-field-content">
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="parents"><span></span>あり
-                  <input type="number" name="parents-num" min="1" max="2" class="js-clickable"><span
+                  <input type="radio" name="parents" id="parents-yes"><span></span>あり
+                  <input type="number" name="parents-num" id="parents-num" min="1" max="2" class="js-clickable" disabled=""><span
                     class="form-control-unit">人</span>
                 </label>
               </div>
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="parents"><span></span>なし
+                  <input type="radio" name="parents" id="parents-none"><span></span>なし
                 </label>
               </div>
             </div>
@@ -74,14 +74,14 @@
             <div class="form-field-content">
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="brother"><span></span>あり
-                  <input type="number" name="brother-num" min="1" max="5" class="js-clickable"><span
+                  <input type="radio" name="brother" id="brother-yes"><span></span>あり
+                  <input type="number" name="brother" id="brother-num" min="1" max="5" class="js-clickable" disabled=""><span
                     class="form-control-unit">人</span>
                 </label>
               </div>
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="brother"><span></span>なし
+                  <input type="radio" name="brother" id="brother-none"><span></span>なし
                 </label>
               </div>
             </div>
