--- a/dest/index.html
+++ b/dest/index.html
@@ -92,12 +92,12 @@
                                     <div class="form-field-content">
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="children"><span></span>あり <input type="number" name="children-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span>
+                                                <input type="radio" name="children" id="children-yes"><span></span>あり <input type="number" name="children-num" id="children-num" min="1" max="5" class="js-clickable" disabled=""><span class="form-control-unit">人</span>
                                             </label>
                                         </div>
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="children"><span></span>なし </label>
+                                                <input type="radio" name="children" id="children-none"><span></span>なし </label>
                                         </div>
                                     </div>
                                 </div>
@@ -107,12 +107,12 @@
                                     <div class="form-field-content">
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="parents"><span></span>あり <input type="number" name="parents-num" min="1" max="2" class="js-clickable"><span class="form-control-unit">人</span>
+                                                <input type="radio" name="parents" id="parents-yes"><span></span>あり <input type="number" name="parents-num" id="parents-num" min="1" max="2" class="js-clickable" disabled=""><span class="form-control-unit">人</span>
                                             </label>
                                         </div>
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="parents"><span></span>なし </label>
+                                                <input type="radio" name="parents" id="parents-none"><span></span>なし </label>
                                         </div>
                                     </div>
                                 </div>
@@ -121,12 +121,12 @@
                                     <div class="form-field-content">
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="brother"><span></span>あり <input type="number" name="brother-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span>
+                                                <input type="radio" name="brother" id="brother-yes"><span></span>あり <input type="number" name="brother" id="brother-num" min="1" max="5" class="js-clickable" disabled=""><span class="form-control-unit">人</span>
                                             </label>
                                         </div>
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="brother"><span></span>なし </label>
+                                                <input type="radio" name="brother" id="brother-none"><span></span>なし </label>
                                         </div>
                                     </div>
                                 </div>
