トップページ修正（更新履歴まで）

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,14 +23,10 @@
             <div class="form-field-label">配偶者</div>
             <div class="form-field-content">
               <div class="form-control form-control-radio">
-                <label>
-                  <input type="radio" name="spouse"><span></span>あり
-                </label>
+                <label><input type="radio" name="spouse"><span></span>あり</label>
               </div>
               <div class="form-control form-control-radio">
-                <label>
-                  <input type="radio" name="spouse"><span></span>なし
-                </label>
+                <label><input type="radio" name="spouse"><span></span>なし</label>
               </div>
             </div>
           </div>
@@ -38,15 +34,11 @@
             <div class="form-field-label">子供<span>（5名まで）</span></div>
             <div class="form-field-content">
               <div class="form-control form-control-radio">
-                <label>
-                  <input type="radio" name="children" id="children-yes"><span></span>あり
-                  <input type="number" name="children-num" id="children-num" min="1" max="5" class="js-clickable" disabled=""><span
-                    class="form-control-unit">人</span>
-                </label>
+                <label><input type="radio" name="children"><span></span>あり<input type="number" name="children-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span></label>
               </div>
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="children" id="children-none"><span></span>なし
+                  <input type="radio" name="children"><span></span>なし
                 </label>
               </div>
             </div>
@@ -56,15 +48,11 @@
             </div>
             <div class="form-field-content">
               <div class="form-control form-control-radio">
-                <label>
-                  <input type="radio" name="parents" id="parents-yes"><span></span>あり
-                  <input type="number" name="parents-num" id="parents-num" min="1" max="2" class="js-clickable" disabled=""><span
-                    class="form-control-unit">人</span>
-                </label>
+                <label><input type="radio" name="parents"><span></span>あり<input type="number" name="parents-num" min="1" max="2" class="js-clickable"><span class="form-control-unit">人</span></label>
               </div>
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="parents" id="parents-none"><span></span>なし
+                  <input type="radio" name="parents"><span></span>なし
                 </label>
               </div>
             </div>
@@ -73,15 +61,11 @@
             <div class="form-field-label">兄弟姉妹<span>（5名まで）</span></div>
             <div class="form-field-content">
               <div class="form-control form-control-radio">
-                <label>
-                  <input type="radio" name="brother" id="brother-yes"><span></span>あり
-                  <input type="number" name="brother" id="brother-num" min="1" max="5" class="js-clickable" disabled=""><span
-                    class="form-control-unit">人</span>
-                </label>
+                <label><input type="radio" name="brother"><span></span>あり<input type="number" name="brother-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span></label>
               </div>
               <div class="form-control form-control-radio">
                 <label>
-                  <input type="radio" name="brother" id="brother-none"><span></span>なし
+                  <input type="radio" name="brother"><span></span>なし
                 </label>
               </div>
             </div>
@@ -115,20 +99,24 @@
   </div>
 </section>
 
-<section class="box-wrapper top-section02">
+<section class="box-wrapper top-section02-image">
   <div class="box-inner">
     <h3><span>充実した“これから”を過ごすために</span></h3>
+  </div>
+</section>
+
+<section class="box-wrapper top-section02">
+  <div class="box-inner">
     <div class="top-sec02-text-wrapper">
       <div class="top-sec02-text-left">
-        <h4>「はなまる」でできること</h4>
+        <h3>「はなまる」でできること</h3>
         <p>
           「はなまる」はそろそろ終活をしなければいけないとお考えの方やそのご家族の方がご利用できる「終活まとめコンシェルジュ」です。終活の対策は早ければ早いほど、納税資金の税金対策や、様々な最新の法律に元づく特例を利用するための準備ができます。<br>最終的にだれにでもやってくる終活にかかる費用・トラブル・問題点が対策をするのとしないのでは大きく結果が違ってきます。<br>ぜひ無料マイページ診断を利用いただきご自身や、相続をすることになるご家族の方々に「最良の終活方法」を見つけてみてはいかがでしょうか。
         </p>
       </div>
       <div class="top-sec02-text-right">
         <p><span class="color-pink">■</span> 無料会員ページご活用方法</p>
-        <iframe id="ytplayer" type="text/html" width="370" height="210"
-          src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
+        <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
         <a href="#">その他動画を見る <span class="color-pink">▶︎</span></a>
       </div>
       <span class="top-sec02-character"><img src="/images/top/sec02-ill01.png" alt="まずは動画をチェック！"></span>
@@ -209,11 +197,12 @@
       <span class="top-sec03-result-arrow"></span>
       <p class="top-sec03-result">相談をするだけでなく<br class="pc-none">「各相談にどれくらいの」<br class="pc-none">「全体でどれくらいの」<br>金額が必要になるかの<br class="pc-none">確認も重要です</p>
     </div>
+  </div>
 </section>
 
 <section class="box-wrapper top-section04">
   <div class="box-inner">
-    <h3>〝終活のすべてをワンストップで〟はなまるサービスの特徴をご紹介</h3>
+    <h3>〝終活のすべてをワンストップで〟<br class="pc-none">はなまるサービスの特徴をご紹介</h3>
     <div class="top-sec04-service01">
       <img src="/images/top/sec04-ill01.png" alt="">
       <h4>誰もがする必要のある終活項目を<br>ワンストップで解決</h4>
@@ -235,21 +224,18 @@
         無料会員登録をすれば、だれでも簡単にマイページであなたの終活対策を進めることができます。<br>入力された項目から重要度に応じて状況を把握。しなければいけないケースや状況を分かりやすく把握でき、スムーズに終活の問題を解決、また対策を進めていけます。
       </p>
     </div>
-    <p class="top-sec04-result">「託す方」「託される方」どちらも納得できる理想の終活をサポート致します</p>
+    <p class="top-sec04-result">「託す方」「託される方」<br class="pc-none">どちらも納得できる理想の<br class="pc-none">終活をサポート致します</p>
   </div>
 </section>
 
 <section class="box-wrapper top-section05">
   <div class="box-inner">
-    <h3>最新情報</h3>
-    <dl>
-      <dt>2020.4.14</dt>
-      </dd>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</dd>
-      <dt>2020.4.13</dt>
-      </dd>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</dd>
-      <dt>2020.4.12</dt>
-      </dd>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</dd>
-    </dl>
+    <h3><span>最新情報</span></h3>
+    <ul>
+      <li><span class="top-sec05-date">2020.4.14</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
+      <li><span class="top-sec05-date">2020.4.13</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
+      <li><span class="top-sec05-date">2020.4.12</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
+    </ul>
   </div>
 </section>
 
