--- a/src/html/index.html
+++ b/src/html/index.html
@@ -232,9 +232,9 @@
   <div class="box-inner">
     <h3><span>最新情報</span></h3>
     <ul>
-      <li><span class="top-sec05-date">2020.4.14</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
-      <li><span class="top-sec05-date">2020.4.13</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
-      <li><span class="top-sec05-date">2020.4.12</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
+      <li><span>2020.4.14</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
+      <li><span>2020.4.13</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
+      <li><span>2020.4.12</span><p>ここに最新情報が入ります。詳しくは決まり次第反映させます。ここに最新情報が入ります。詳しくは決まり次第反映させます。</p></li>
     </ul>
   </div>
 </section>
@@ -242,26 +242,28 @@
 <section class="box-wrapper top-section06">
   <div class="box-inner">
     <h3>ご利用の流れ</h3>
-    <div class="top-sec06-wrapper">
-      <div class="top-sec06-item">
-        <h4><img src=""></h4>
+    <ul class="top-sec06-wrapper">
+      <li>
+        <h4><img src="/images/top/sec06-title01.png" alt="かんたん無料会員登録"></h4>
         <p>所要時間わずか1分。無料会員登録をしてあなたのマイページを作成。</p>
-      </div>
-      <div class="top-sec06-item">
-        <h4><img src=""></h4>
+      </li>
+      <li>
+        <h4><img src="/images/top/sec06-title02.png" alt="終活クイック診断をしてやるべきことを明確化"></h4>
         <p>終活の悩みや状況を入力して、専門家が 対策すべき項目や相談を項目に応じて診断し、明確化していきします。</p>
-      </div>
-      <div class="top-sec06-item">
-        <h4><img src=""></h4>
+      </li>
+      <li>
+        <h4><img src="/images/top/sec06-title03.png" alt="終活対策や問題点を専門家に無料オンライン相談"></h4>
         <p>診断で表示された解決・対策すべき項目をワンストップで各専門家に相談。自宅にいながら気軽に相談ができます。</p>
-      </div>
-    </div>
+      </ul>
+    </ul>
     <div class="top-sec06-video">
       <div class="top-sec06-video-item">
-        <h4><span class="color-green">■</span> マイページのご活用方法</h4>
+        <p><span class="color-green">■</span> マイページのご活用方法</p>
+        <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
       </div>
       <div class="top-sec06-video-item">
-        <h4><span class="color-green">■</span> 無料オンライン相談ご活用方法</h4>
+        <p><span class="color-green">■</span> 無料オンライン相談ご活用方法</p>
+        <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
       </div>
     </div>
   </div>
