--- a/dest/index.html
+++ b/dest/index.html
@@ -330,7 +330,7 @@
             </section>
             <section class="box-wrapper top-section08">
                 <div class="box-inner">
-                    <h3>終活コラム・人気記事</h3>
+                    <h3><span>終活コラム・人気記事</span></h3>
                     <div class="top-sec08-ranking">
                         <h4><img src="/images/top/sec08-title01.png" alt="検索ワードランキング"></h4>
                         <ul>
