--- a/dest/index.html
+++ b/dest/index.html
@@ -377,6 +377,7 @@
                             </li>
                         </ul>
                     </div>
+                    <p>《各キーワードをクリックすると、該当するサービスへ移動します。》</p>
                 </div>
             </section>
             <section class="box-wrapper top-section09">
