--- a/dest/index.html
+++ b/dest/index.html
@@ -161,7 +161,7 @@
                         </div>
                         <div class="top-sec02-text-right">
                             <p><span class="color-pink">■</span> 無料会員ページご活用方法</p>
-                            <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
+                            <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=0&origin=http://example.com" frameborder="0"></iframe>
                             <a href="#">その他動画を見る <span class="color-pink">▶︎</span></a>
                         </div>
                         <span class="top-sec02-character"><img src="/images/top/sec02-ill01.png" alt="まずは動画をチェック！"></span>
@@ -300,11 +300,11 @@
                     <div class="top-sec06-video">
                         <div class="top-sec06-video-item">
                             <p><span class="color-green">■</span> マイページのご活用方法</p>
-                            <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
+                            <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=0&origin=http://example.com" frameborder="0"></iframe>
                         </div>
                         <div class="top-sec06-video-item">
                             <p><span class="color-green">■</span> 無料オンライン相談ご活用方法</p>
-                            <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
+                            <iframe id="ytplayer" width="370" height="210" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=0&origin=http://example.com" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
@@ -382,7 +382,7 @@
             </section>
             <section class="box-wrapper top-section09">
                 <div class="box-inner">
-                    <h3>よくあるご質問</h3>
+                    <h3 /><span>よくあるご質問</span></h3>
                     <ul>
                         <li><a href="#"><img src="/images/top/sec09-01.png" alt="当サイトのご利用について"></a></li>
                         <li><a href="#"><img src="/images/top/sec09-02.png" alt="サポートセンターはありますか？"></a></li>
