[TOP]クイック診断フォーム操作追加

--- a/dest/index.html
+++ b/dest/index.html
@@ -89,11 +89,12 @@
                                     <div class="form-field-label">子供<span>（5名まで）</span></div>
                                     <div class="form-field-content">
                                         <div class="form-control form-control-radio">
-                                            <label><input type="radio" name="children"><span></span>あり<input type="number" name="children-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span></label>
+                                            <label><input type="radio" name="children" id="children-yes"><span></span>あり<input type="number" name="children-num" id="children-num" min="1" max="5" class="js-clickable" disabled=""><span class="form-control-unit">人</span>
+                                            </label>
                                         </div>
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="children"><span></span>なし </label>
+                                                <input type="radio" name="children" id="children-none"><span></span>なし </label>
                                         </div>
                                     </div>
                                 </div>
@@ -102,11 +103,11 @@
                                     </div>
                                     <div class="form-field-content">
                                         <div class="form-control form-control-radio">
-                                            <label><input type="radio" name="parents"><span></span>あり<input type="number" name="parents-num" min="1" max="2" class="js-clickable"><span class="form-control-unit">人</span></label>
+                                            <label><input type="radio" name="parents" id="parents-yes"><span></span>あり<input type="number" name="parents-num" id="parents-num" min="1" max="2" class="js-clickable"><span class="form-control-unit">人</span></label>
                                         </div>
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="parents"><span></span>なし </label>
+                                                <input type="radio" name="parents" id="parents-none"><span></span>なし </label>
                                         </div>
                                     </div>
                                 </div>
@@ -114,11 +115,11 @@
                                     <div class="form-field-label">兄弟姉妹<span>（5名まで）</span></div>
                                     <div class="form-field-content">
                                         <div class="form-control form-control-radio">
-                                            <label><input type="radio" name="brother"><span></span>あり<input type="number" name="brother-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span></label>
+                                            <label><input type="radio" name="brother" id="brother-yes"><span></span>あり<input type="number" name="brother-num" id="brother-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span></label>
                                         </div>
                                         <div class="form-control form-control-radio">
                                             <label>
-                                                <input type="radio" name="brother"><span></span>なし </label>
+                                                <input type="radio" name="brother" id="brother-none"><span></span>なし </label>
                                         </div>
                                     </div>
                                 </div>
