[追加] マイページ用HTML追加＆テンプレートパラメータ修正

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "name": "index",
+    "cssname": "index",
     "css": "true",
     "title": ""
 } %}
