--- a/src/html/mypage_status-modal.html
+++ b/src/html/mypage_status-modal.html
@@ -7,6 +7,8 @@
 {% block content %}
 
 <section class="box-wrapper my-st-section01">
+  <div class="box-inner">
+  </div>
 </section>
 
 {% endblock %}
