[マイページ] HTMLコード修正

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -345,7 +345,7 @@
 
 <section class="box-wrapper top-section09">
   <div class="box-inner">
-    <h3/><span>よくあるご質問</span></h3>
+    <h3><span>よくあるご質問</span></h3>
     <ul>
       <li><a href="#"><img src="/images/top/sec09-01.png" alt="当サイトのご利用について"></a></li>
       <li><a href="#"><img src="/images/top/sec09-02.png" alt="サポートセンターはありますか？"></a></li>
