--- a/src/html/mypage_notifications.html
+++ b/src/html/mypage_notifications.html
@@ -9,16 +9,63 @@
     "url": "/",
     "text": "ホーム"
   }, {
+    "url": "/mypage/",
+    "text": "マイページ"
+  }, {
     "url": "",
     "text": "お知らせ"
   }
+] %}
+{% set lists = [
+  [ "1分前", 
+    "はなまるより、●○●○●○●○●○○●○●○○●○●○○●○●○のお知らせがあります。",
+    "上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。"
+  ], [
+    "1分前",
+    "はなまるより、●○●○●○●○●○についてのお知らせがあります。",
+    "上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。"
+  ], [
+    "1分前",
+    "はなまるより、●○●○●○●○●○のお知らせがあります。",
+    "上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。"
+  ], [
+    "1分前",
+    "はなまるより、●○●○●○●○●○○●○●○○●○●○○●○●○のお知らせがあります。",
+    "上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。"
+  ], [
+    "1分前",
+    "はなまるより、●○●○●○●○●○についてのお知らせがあります。",
+    "上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。"
+  ], [
+    "1分前",
+    "はなまるより、●○●○●○●○●○のお知らせがあります。",
+    "上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。上のタイトルをクリックすると、お知らせ情報の詳細がアコーディオンで広がって確認できます。"
+  ]
 ] %}
 {% block content %}
 
 <section class="box-wrapper my-not-section01">
   <div class="box-inner">
   {% include '_breadcrumb.html' %}
-  
+
+    <div class="mypage-status">
+       <ul>
+         <li>重要度チェック</li>
+         <li class="current">お知らせ</li>
+         <li>ステータス確認</li>
+         <li>相続予定財産情報</li>
+       </ul>
+    </div>
+
+  <ul>
+    {% for time, title, detail in lists %}
+      <li>
+        <p class="my-not-title js_accordion">{{title}}</p>
+        <span class="my-not-update">{{time}}</span>
+        <p class="my-not-detail">{{detail}}</p>
+      </li>
+    {% endfor %}
+  </ul>
   </div>
 </section>
 
