--- a/src/html/mypage_status.html
+++ b/src/html/mypage_status.html
@@ -18,7 +18,43 @@
 <section class="box-wrapper my-st-section01">
   <div class="box-inner">
   {% include '_breadcrumb.html' %}
-  
+
+    <div class="mypage-status">
+       <ul>
+         <li>重要度チェック</li>
+         <li>お知らせ</li>
+         <li class="current">ステータス確認</li>
+         <li>相続予定財産情報</li>
+       </ul>
+    </div>
+
+    <div class="my-st-member">
+      <div class="my-st-member-image">
+        <img src="/images/mypage/icon-default.png" alt="">
+      </div>
+      <div class="my-st-member-info">
+        <p><span>はなまる　太郎</span><span>ハナマル　タロウ</span></p>
+        <p>続柄：父</p>
+      </div>
+      <div class="my-st-member-button">
+        <div class="form-control form-control-button">
+          <button class="button">編集する</button>
+        </div>
+        <div class="form-control form-control-button">
+          <button class="button button-type3">退会する</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="my-st-family-tree">
+
+    </div>
+
+    <div class="form-field form-field-single">
+      <div class="form-control form-control-button">
+        <button>編集する</button>
+      </div>
+    </div>
   </div>
 </section>
 
