--- a/src/html/mypage_legacyinfo.html
+++ b/src/html/mypage_legacyinfo.html
@@ -9,6 +9,9 @@
     "url": "/",
     "text": "ホーム"
   }, {
+    "url": "/mypage/",
+    "text": "マイページ"
+  }, {
     "url": "",
     "text": "相続予定財産情報"
   }
@@ -22,7 +25,7 @@
     <div class="mypage-status">
        <ul>
          <li>重要度チェック</li>
-         <li>お知らせ</　li>
+         <li>お知らせ</li>
          <li>ステータス確認</li>
          <li class="current">相続予定財産情報</li>
        </ul>
@@ -53,7 +56,7 @@
 
       <dt>納税額</dt>
       <dd class="color-pink"><span class="js-numberformat">100</span><span class="price-unit">万円</span>
-        <div class="my-leg-detail">&lt;内訳&dt;<br>
+        <div class="my-leg-detail">&lt;内訳&gt;<br>
          <table>
            <tr><th>妻</th><td><span class="js-numberformat">400</span><span class="price-unit">万円</span></td></tr>
            <tr><th>子1</th><td><span class="js-numberformat">100</span><span class="price-unit">万円</span></td></tr>
